# SShopPriceTracker

./: .dockerignore  .env.example  .gitignore  README.md  api_service.py  app.py  check_missing_products.py  config.py  docker-compose.yml  fetch_data.py  main.py  price_history.db  price_history.py  product.py  pyproject.toml  sync_outOfStock_status.py  update_db.py
backend/: Dockerfile  alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 20260528_0001_create_product_tracking_tables.py
backend/src/: __init__.py
backend/src/api/: deps.py  main.py
backend/src/api/v1/: products.py  router.py  schemas.py  sync.py
backend/src/application/: __init__.py
backend/src/application/products/: __init__.py  ports.py  sync_products.py
backend/src/config/: logging.py  settings.py
backend/src/core/: errors.py
backend/src/domain/price_history/: __init__.py  entities.py
backend/src/domain/products/: __init__.py  entities.py  value_objects.py
backend/src/infrastructure/database/: models.py  repositories.py  session.py
backend/sshop_price_tracker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/unit/: test_health.py  test_product_domain.py  test_samsung_client.py  test_sync_products.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: query-provider.tsx
frontend/src/features/products/: api.ts  (+1 more)
frontend/src/lib/: api-client.ts  utils.ts
legacy/desktop/: price_history.py  samsung_products.py
tests/: test_availability_subscriptions.py
(+4 files in other folders)
